salesforce/force-app/main/default/objects/Outreach_Message__c/Outreach_Message__c.object-meta.xml
<CustomObject>
    <label>Outreach Message</label>
    <pluralLabel>Outreach Messages</pluralLabel>
    <description>One record per inbound or outbound message. The conversation thread of record; every outbound message must be reconstructable from this record.</description>
    <nameField>
        <label>Message Number</label>
        <type>AutoNumber</type>
        <displayFormat>OM-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>