salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <description>Verbatim message body as sent or received.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>