salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <description>Provider-reported delivery status (Twilio status callbacks), updated idempotently on Provider_Message_Id__c. Text rather than restricted picklist so an unexpected provider status can never fail the callback.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>