salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Guardrail_Action__c.field-meta.xml
<CustomField>
    <fullName>Guardrail_Action__c</fullName>
    <label>Guardrail Action</label>
    <description>Deterministic guardrail verdict for this inbound message: suppress_and_stop, human_review, or proceed. Part of the audit trail — every decision is reconstructable.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>