salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Guardrail_Rule__c.field-meta.xml
<CustomField>
    <fullName>Guardrail_Rule__c</fullName>
    <label>Guardrail Rule</label>
    <description>Which guardrail rule fired (opt_out, legal_escalation, hostility, bounce_or_autoreply, loop_breaker); blank when the message proceeded.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>