salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Intent_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confidence__c</fullName>
    <label>Intent Confidence</label>
    <description>Calibrated probability (0-1) at classification time.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>