salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <description>The lead this message belongs to. Restricted delete: a lead with messages cannot be deleted.</description>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Outreach Messages</relationshipLabel>
    <relationshipName>Outreach_Messages</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>