salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <description>Classifier version at classification time. Part of the reconstructability contract.</description>
    <type>Text</type>
    <length>64</length>
</CustomField>