salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <label>Needs Review</label>
    <description>Flagged for the human review queue (guardrail human_review verdict, or a failed AWS suppression sync). No automated response of any kind is sent while set.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>