salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Predicted_Intent__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Intent__c</fullName>
    <label>Predicted Intent</label>
    <description>Classifier-predicted intent (inbound messages) or the intent this reply answered (outbound).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outreach_Intent</valueSetName>
    </valueSet>
</CustomField>