salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Provider_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Message_Id__c</fullName>
    <label>Provider Message Id</label>
    <description>The messaging provider's message ID. Webhook idempotency key: providers retry, and a duplicate insert must fail on uniqueness rather than double-log (which causes double-replies).</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>