salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Reply_Template__c.field-meta.xml
<CustomField>
    <fullName>Reply_Template__c</fullName>
    <label>Reply Template</label>
    <description>The approved template this outbound message was generated from. Restricted delete keeps sent messages reconstructable.</description>
    <type>Lookup</type>
    <referenceTo>Reply_Template__c</referenceTo>
    <relationshipLabel>Messages Sent</relationshipLabel>
    <relationshipName>Messages_Sent</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>