salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Send_Error__c.field-meta.xml
<CustomField>
    <fullName>Send_Error__c</fullName>
    <label>Send Error</label>
    <description>Error detail when a send attempt failed. Failures are logged, never dropped.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>