salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <label>Sent At</label>
    <description>Provider timestamp: when the message was sent (outbound) or received (inbound).</description>
    <type>DateTime</type>
</CustomField>