salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <label>Template Version</label>
    <description>Snapshot of the template's Version__c at send time.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>