salesforce/force-app/main/default/objects/Outreach_Message__c/fields/Unmatched__c.field-meta.xml
<CustomField>
    <fullName>Unmatched__c</fullName>
    <label>Unmatched</label>
    <description>Inbound message whose sender could not be matched to a Lead by normalized phone. These form the unmatched review queue — logged, never dropped.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>